--- a/src/style.css
+++ b/src/style.css
@@ -288,6 +288,7 @@ a:focus {
   font-family: var(--font-heading);
   text-decoration: none;
   font-size: var(--fontSize-2);
+  color: var(--color-black);
 }
 
 .bio {
